--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,22 +18,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/apptheam">
-        <activity android:name=".Clientids_requestchangepass"></activity>
-        <activity android:name=".Deposit_Id_details" />
+        <activity
+            android:name=".Act_CloseId_list"
+            android:exported="true" />
+        <activity android:name=".Act_Clientids_requestchangepass" />
+        <activity android:name=".Act_Deposit_Id_details" />
         <activity android:name=".Act_paymentdeposit" />
-        <activity android:name=".Puch_Notification" />
-        <activity android:name=".Banner_create" />
-        <activity android:name=".Deposits_details" />
-        <activity android:name=".Full_image" />
-        <activity android:name=".User_requestlist" />
-        <activity android:name=".Financialdetail" />
-        <activity android:name=".Withdrawals_request" />
-        <activity android:name=".Paymentdeposits_list" />
-        <activity android:name=".Subadmin_list" />
-        <activity android:name=".Website_list" />
-        <activity android:name=".User_list" />
-        <activity android:name=".Dashbord" />
-        <activity android:name=".Login_screen" />
+        <activity android:name=".Act_Puch_Notification" />
+        <activity android:name=".Act_Banner_create" />
+        <activity android:name=".Act_Deposits_details" />
+        <activity android:name=".Act_Full_image" />
+        <activity android:name=".Act_User_requestlist" />
+        <activity android:name=".Act_Financialdetail" />
+        <activity android:name=".Act_Withdrawals_request" />
+        <activity android:name=".Act_Paymentdeposits_list" />
+        <activity android:name=".Act_Subadmin_list" />
+        <activity android:name=".Act_Website_list" />
+        <activity android:name=".Act_User_list" />
+        <activity android:name=".Act_Dashbord" />
+        <activity android:name=".Act_Login_screen" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
